--- a/src/js/components/movie-list/movie-list.css
+++ b/src/js/components/movie-list/movie-list.css
@@ -4,11 +4,34 @@
 
 .card{
   background-color: rgb(24, 24, 24);
-  color: white;
 }
 
 .rating-wrapper > img{
   width: 15px;
   height: 15px;
   margin-right: 5px;
+}
+
+*{
+  color: white;
+}
+
+@keyframes pulse {
+  0%{
+    transform: scale(1);
+  }
+  
+  50%{
+    transform: scale(1.5);
+    background-color: rgba(255, 157, 28, 0.5);
+  }
+}
+
+.loading-circle{
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  border: 5px solid #fa9021;
+  display: block;
+  animation: pulse 1s infinite;
 }
